<resources>
    <string name="app_name">CRTF Excel Creator</string>

    <string name="your_fname">پورا نام</string>
    <string name="your_are_details">اپنے علاقے کی تفصیلات درج کریں.</string>
    <string name="your_htitle">راشن رجسٹریشن</string>
    <string name="your_cnic">شناختی کارڈ نمبر</string>
    <string name="your_cnic_date_of_issue">شناختی کارڈ کی تاریخ اجراء</string>
    <string name="your_gender">جنس</string>
    <string name="your_ms">ازدواجی حیثیت</string>
    <string name="your_mobile">موبائل نمبر</string>

    <string name="your_city">شہر / گاؤں</string>
    <string name="your_flatno">گھر کا نمبر</string>
    <string name="your_tehsil">تحصیل</string>
    <string name="your_zila">ضلع</string>
    <string name="your_streetno">گلی نمبر / محلہ / علاقہ</string>
    <string name="Register">جمع کروائیں</string>
    <string name="title_activity_dashboard_">Dashboard_Activity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="view">Haripur</string>

    <string name="rate_app">Rate App</string>
    <string name="home">Home</string>
    <string name="settings">Setting</string>
    <string name="no_record_found">کوئی ریکارڈ نہیں ملا ہے</string>
    <string name="export">Export Data to Excel</string>
    <string-array name="year_array">
        <item>Year</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="months_array">
        <item>Month</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="days_array">
        <item>Day</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>

    <string-array name="ms_array">
        <item>Martial Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorcee</item>
        <item>Widow</item>
        <item>Widower</item>

    </string-array>
</resources>
