<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/export"
            android:icon="@drawable/ic_export"
            android:title="@string/export" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/rateApp"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_app" />


    </group>
</menu>
