<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/your_htitle"

        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvyrEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/your_fname"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter Full Name"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_cnic"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCnic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter CNIC"
                android:inputType="number"
                android:maxLength="13"
                android:paddingLeft="16dp"
                android:text="" />

            <TextView
                android:id="@+id/tvpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_mobile"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/edittext_hollw"
                android:hint="03xx1234567"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="16dp"
                android:text="" />

            <TextView
                android:id="@+id/tvdof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_cnic_date_of_issue"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Spinner
                    android:id="@+id/cnic_day"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/cnic_month"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/cnic_year"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="20dp"
                        android:text="@string/your_ms" />

                    <Spinner
                        android:id="@+id/sp_ms"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/your_gender" />

                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/your_flatno" />

            <EditText
                android:id="@+id/flatnumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter Flat / House number"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/your_streetno" />

            <EditText
                android:id="@+id/etMohallah"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter Street, Mohallah or Area Name"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:text="@string/your_city" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter City or Village Name"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/your_zila" />

            <EditText
                android:id="@+id/etZila"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:paddingLeft="16dp"
                android:inputType="textCapSentences"
                android:text="Haripur" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/your_tehsil" />

            <EditText
                android:id="@+id/etTehsil"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:paddingLeft="16dp"
                android:inputType="textCapSentences"
                android:text="Haripur" />

            <com.iamsafi.crtfehsaas.utils.CustomButton
                android:id="@+id/registerBtn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="right"
                 />
        </LinearLayout>
    </ScrollView>

</LinearLayout>






