<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/your_are_details"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_flatno"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/flatnumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter Flat / House number"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_streetno"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etMohallah"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter Street, Mohallah or Area Name"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/your_city"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_hollw"
                android:hint="Enter City or Village Name"
                android:inputType="textCapSentences"
                android:paddingLeft="16dp" />

            <com.iamsafi.crtfehsaas.utils.CustomButton
                android:id="@+id/registerBtn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>